// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
Object {
  "Constructor": "FormContainer",
  "Options": Object {
    "ID": "component",
    "dataSaving": false,
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "errors": Array [],
    "formClass": "form",
    "getErrors": [Function],
    "submit": [Function],
    "submitText": "",
    "success": [Function],
  },
  "html": "
<form class=\\"form\\">
  <!--header-->
  <!--if-->
  <!--ErrorsPanel-->
  <!--default-->
  <button type=\\"submit\\">
    <!--if-->
    <!--submit-->
  </button>
  <!--footer-->
</form>
",
}
`;

exports[`submit fail 1`] = `
Object {
  "Constructor": "FormContainer",
  "Options": Object {
    "ID": "component",
    "dataSaving": false,
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "errors": Array [],
    "formClass": "form",
    "getErrors": [Function],
    "submit": [MockFunction] {
      "calls": Array [
        Array [
          FormData {
            Symbol(impl): FormDataImpl {
              "_entries": Array [],
              Symbol(wrapper): [Circular],
            },
          },
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": Promise {},
        },
      ],
    },
    "submitText": "",
    "success": [Function],
  },
  "html": "
<form class=\\"form\\">
  <!--header-->
  <!--if-->
  <!--ErrorsPanel-->
  <!--default-->
  <button type=\\"submit\\">
    <!--if-->
    <!--submit-->
  </button>
  <!--footer-->
</form>
",
}
`;
